fix: p50 latency