@@ -5,6 +5,7 @@ import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import com.eronalves.projectflux.logging.PipelineLogger;
 
 public class PipelineMetrics {
 
@@ -25,7 +26,26 @@ public class PipelineMetrics {
   }
 
   public Map<String, Object> snapshot() {
-    return Collections.emptyMap();
+    return Map.of("events_processed", String.valueOf(eventsProcessed), "errors",
+        String.valueOf(errors.size()), "p50_latency", String.valueOf(calculateP50Latency()) + "ns");
+  }
+
+  private long calculateP50Latency() {
+    if (latencies.size() == 0) {
+      return 0;
+    }
+
+    if (latencies.size() == 1) {
+      return latencies.getFirst().toNanos();
+    }
+
+    var sortedLatency = latencies.stream().map(d -> d.toNanos()).sorted().toList();
+    var sortedLatencySize = sortedLatency.size();
+    var sizeIsEven = sortedLatencySize % 2 == 0;
+    var middleOfList = sortedLatencySize / 2;
+
+    return sizeIsEven ? (sortedLatency.get(middleOfList) + sortedLatency.get(middleOfList + 1)) / 2
+        : sortedLatency.get(middleOfList);
   }
 
 }
